@@ -28,8 +28,7 @@ DIRS  = Callback_Quoter \
 	TypeCode_Creation \
 	ior_corbaloc \
 	RTCORBA \
-	RTScheduling \
-	Kokyu_dsrt_schedulers 
+	RTScheduling
 
 ifndef TAO_ROOT
   TAO_ROOT = $(ACE_ROOT)/TAO
@@ -49,6 +48,11 @@ DIRS += \
 	Buffered_Oneways
 
 endif # corba_messaging
+
+ifeq ($(rt_corba),1)
+DIRS += \
+	Kokyu_dsrt_schedulers 
+endif # rt_corba
 
 include $(ACE_ROOT)/include/makeinclude/macros.GNU
 include $(ACE_ROOT)/include/makeinclude/rules.common.GNU
